# Flok

./: .gitignore  README.md  package-lock.json  scaffold.yml
WinUi/: index.html  package-lock.json  package.json  vite.config.ts
WinUi/public/: demoUser.json
WinUi/src/: App.tsx  index.css
WinUi/src/demo/: demoUserStore.ts
WinUi/src/pages/: AccessibilitySettingsPage.tsx  CreateEventPage.tsx  EventsPage.tsx  FriendsPage.tsx  MapPage.tsx  ProfilePage.tsx
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: __init__.py  routes_demo.py  routes_events.py  routes_feed.py  routes_feedback.py  routes_frontend.py  routes_metrics.py  routes_rebalance.py  routes_seed.py  routes_solve.py  routes_state.py  routes_trending.py  routes_users.py
apps/api/app/core/: config.py  logging.py
apps/api/app/domain/: features.py  models.py
apps/api/app/metrics/: compute.py
apps/api/app/ml/: __init__.py  rsvp_model.py
apps/api/app/optimizer/: fairness.py  pricing.py  solver.py
apps/api/app/services/: simulation.py  state_store.py
apps/api/data/: impressions.jsonl  rsvp_model.json  rsvps.jsonl
apps/api/scripts/: train_rsvp_model.py
apps/api/tests/: test_api_endpoints.py  test_fairness.py  test_features.py  test_pricing.py  test_solver.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: format.ts
docs/: README.md  accessibility.md  deep-dive.md  math-and-ml.md
