[project]
name = "flok-api"
version = "0.1.0"
description = "Flok hackathon backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.4",
  "numpy>=1.24",
  "ortools>=9.7",
  "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
